Add access key swagger definition and types
